--- a/style.css
+++ b/style.css
@@ -20,10 +20,36 @@ p{
   font-family: 'Hind', sans-serif;
 }
 
+.p-pos {
+  text-align: center;
+  padding-bottom: 20px;
+}
+
 header{
   border-radius: 10px;
 
   flex-wrap: wrap;
+
+}
+
+.container-one {
+  position: relative;
+  left: 100px;
+  padding: 200px;
+
+}
+
+.container-two {
+  position: relative;
+  right: 650px;
+  padding: 200px;
+
+}
+
+.container-three {
+  position: relative;
+  left: 100px;
+  padding: 200px;
 
 }
 
@@ -40,10 +66,11 @@ h3.headerpos{
   padding-bottom: 60px
 }
 
-
 body{
   flex-wrap: wrap;
+  background-image: url("Images/idasg1BG.png")
 }
+
 
 p{
   border-radius: 10px;
@@ -52,14 +79,6 @@ p{
 
 footer{
 
-  border-radius: 10px;
-  flex-wrap: wrap;
-}
-
-.edubutton{
-  padding: 5;
-  border: none;
-  background: none;
   border-radius: 10px;
   flex-wrap: wrap;
 }
@@ -86,7 +105,7 @@ textarea{
 }
 
 .eduText:hover , .projText:hover, .webText:hover{
-  padding-top:80px;
+  padding-top:70px;
   transition-duration: 0.5s;
 
 }
@@ -97,3 +116,72 @@ button.eduText, button.projText, button.webText{
 
 }
 
+.return{
+  position: absolute;
+  top:3%;
+  left: 20px;
+  width: 120px;
+  transform: translateY(-50%);
+  font-size: 25px;
+  font-family: 'Comfortaa';
+  background: none;
+  border: none;
+
+}
+
+.container {
+	width: 80%;
+	margin: 0 auto;
+}
+
+header::after {
+  content: '';
+  display: table;
+  clear: both;
+}
+
+nav {
+  float: right;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+nav li {
+  display: inline-block;
+  margin-left: 70px;
+  padding-top: 10px;
+
+  position: relative;
+}
+
+nav a {
+  color: #444;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 14px;
+}
+
+nav a:hover {
+  color: #000;
+}
+
+nav a::before {
+  content: '';
+  display: block;
+  height: 5px;
+  background-color: #444;
+
+  position: absolute;
+  top: 0;
+  width: 0%;
+
+  transition: all ease-in-out 250ms;
+}
+
+nav a:hover::before {
+  width: 100%;
+}
